Fix: fixed alignment for RC cards in mobile view

--- a/hlx_statics/blocks/resource-card/resource-card.css
+++ b/hlx_statics/blocks/resource-card/resource-card.css
@@ -57,10 +57,6 @@ main div.resource-card > div {
   width: 400px;
 } 
 
-  main div.resource-card > div {
-    /* min-width: var(--spectrum-global-dimension-size-4600); */
-  } 
-
   main div.resource-card > div:first-child {
     padding-left: 0 !important;
   } 
@@ -74,13 +70,7 @@ main div.resource-card > div {
     width: 100% !important;
   }
 
-
-main div.resource-card > div{
-  /* padding: 24px; */
-}
-
 main div.resource-card-preview {
-  height: 200px;
   width: 100%;
   padding: 0 !important;
 }
